syntax = "proto3";

package openid.v1;

message Token {
  string refresh_token = 1;
  string access_token = 2;
  // string id_token = 3; // currently unused
  int32 expires_in = 4;
  string scope = 5;
  // string token_type = 6; // currently unused
}

